src/objects/Private_Message__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Private_Message__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Private_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Private_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Private_Messages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Private Message</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Message Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Private_Message__c</fullName>
        <label>Private_Message</label>
    </sharingReasons>
</CustomObject>